ready for prod v2.1

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>Portafolio</title>
   <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="keywords" content="Hike,Tenerife, Greforio, Wanderfamiliy,Senderismo,Hiking, Wander">
+
   <link rel="icon" type="image/svg+xml" href="assets/img/urku-ico.svg">
+  <link rel="icon" type="image/svg+xml" href="assets/img/tripadvisor_icon.svg">
   <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
   <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
   <link rel="stylesheet" href="assets/css/urku.css">
