--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   
 
 <script
-src="https://www.paypal.com/sdk/js?client-id=AfhVJNCZnF_6xgXN1w5peHbbvXBrif-dtabEyOgA9zA7ffHtSKiegcVOo0G8wYsRQ-4pB9gh5NqukT3c&currency=EUR"> 
+src="https://www.paypal.com/sdk/js?client-id="Your_Clien-Id"c&currency=EUR"> 
 
 </script>
 
